--- a/examples/index.html
+++ b/examples/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hive.js</title>
+  <title>Blurt.js</title>
 </head>
 <body>
 
-<script src="../dist/hive.min.js"></script>
+<script src="../dist/blurt.min.js"></script>
 <script>
-hive.api.getConfig(function(err, response){
+blurt.api.getConfig(function(err, response){
   console.log(err, response);
 });
-hive.api.getAccounts(['hiveio', 'mahdiyari'], function(err, response){
+blurt.api.getAccounts(['hiveio', 'mahdiyari'], function(err, response){
   console.log(err, response);
 });
-hive.api.getAccountCount(function(err, response){
+blurt.api.getAccountCount(function(err, response){
   console.log(err, response);
 });
 </script>
