--- a/examples/stream.html
+++ b/examples/stream.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hive.js Stream</title>
+  <title>Blurt.js Stream</title>
 </head>
 <body>
 
-<script src="../dist/hive.min.js"></script>
+<script src="../dist/blurt.min.js"></script>
 <script>
-hive.api.streamOperations(function (err, operations) {
+blurt.api.streamOperations(function (err, operations) {
   operations.forEach(function (operation) {
     console.log(operation);
   });
