--- a/examples/broadcast.html
+++ b/examples/broadcast.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hive.js Broadcast</title>
+  <title>Blurt.js Broadcast</title>
 </head>
 <body>
 
-<script src="../dist/hive.min.js"></script>
+<script src="../dist/blurt.min.js"></script>
 <script>
   /** Configure your account */
   var username = 'guest123';
   var postingWif = '5JRaypasxMx1L97ZUX7YuC5Psb5EAbF821kkAGtBj7xCJFQcbLg';
 
   /** Broadcast a vote */
-  hive.broadcast.vote(
+  blurt.broadcast.vote(
     postingWif,
     username, // Voter
     'hiveio', // Author
@@ -27,7 +27,7 @@
   /** Broadcast a comment */
   var permlink = new Date().toISOString().replace(/[^a-zA-Z0-9]+/g, '').toLowerCase();
 
-  hive.broadcast.comment(
+  blurt.broadcast.comment(
     postingWif,
     'siol', // Parent Author
     'test', // Parent Permlink
@@ -35,7 +35,7 @@
     permlink, // Permlink
     '', // Title
     'This is a test!', // Body
-    { tags: ['test'], app: 'hivejs/examples' }, // Json Metadata
+    { tags: ['test'], app: 'blurtjs/examples' }, // Json Metadata
     function(err, result) {
       console.log(err, result);
     }
@@ -44,7 +44,7 @@
   /** Broadcast a post */
   var permlink = new Date().toISOString().replace(/[^a-zA-Z0-9]+/g, '').toLowerCase();
 
-  hive.broadcast.comment(
+  blurt.broadcast.comment(
     postingWif,
     '', // Leave parent author empty
     'photography', // Main tag
@@ -52,7 +52,7 @@
     permlink + '-post', // Permlink
     'This is just a test!', // Title
     'Nothing to see here', // Body
-    { tags: ['test'], app: 'hivejs/examples' }, // Json Metadata
+    { tags: ['test'], app: 'blurtjs/examples' }, // Json Metadata
     function(err, result) {
       console.log(err, result);
     }
@@ -70,7 +70,7 @@
     }]
   );
 
-  hive.broadcast.customJson(
+  blurt.broadcast.customJson(
     postingWif,
     [], // Required_auths
     [follower], // Required Posting Auths
@@ -90,7 +90,7 @@
     }]
   );
 
-  hive.broadcast.customJson(
+  blurt.broadcast.customJson(
     postingWif,
     [], // Required_auths
     [follower], // Required Posting Auths
